--- a/Chat/src/chat/ClientGUI.form
+++ b/Chat/src/chat/ClientGUI.form
@@ -574,6 +574,9 @@
                           </StringArray>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="statusComboActionPerformed"/>
+                      </Events>
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                       </AuxValues>
@@ -672,19 +675,7 @@
                               </Border>
                             </Property>
                             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                              <StringArray count="11">
-                                <StringItem index="0" value="Mina . Ashutr"/>
-                                <StringItem index="1" value="Alaa"/>
-                                <StringItem index="2" value="Basem"/>
-                                <StringItem index="3" value="Bero"/>
-                                <StringItem index="4" value="Hussein"/>
-                                <StringItem index="5" value="ahmed"/>
-                                <StringItem index="6" value="karem"/>
-                                <StringItem index="7" value="karamela"/>
-                                <StringItem index="8" value="Sobhy"/>
-                                <StringItem index="9" value="hazem"/>
-                                <StringItem index="10" value=""/>
-                              </StringArray>
+                              <StringArray count="0"/>
                             </Property>
                             <Property name="toolTipText" type="java.lang.String" value="Choose One Or More User To Start Chat"/>
                           </Properties>
@@ -705,6 +696,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Add"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addFriendBtnActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JSeparator" name="jSeparator1">
                     </Component>
