user notifications and server statistics

--- a/src/server/ServerGUI.form
+++ b/src/server/ServerGUI.form
@@ -182,8 +182,7 @@
                       <Group type="102" attributes="0">
                           <Component id="jScrollPane3" pref="232" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="sendBtn" min="-2" pref="66" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="sendBtn" min="-2" pref="78" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -297,10 +296,8 @@
                               <Component id="ServerStatusBtn" alignment="0" pref="292" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="onlineLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="onlineLabel" min="-2" max="-2" attributes="0"/>
                                       <Component id="offlineLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="awyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="connectedLabel" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
@@ -314,15 +311,11 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="ServerStatusBtn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="connectedLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="93" max="32767" attributes="0"/>
-                          <Component id="onlineLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
-                          <Component id="offlineLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
-                          <Component id="awyLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="119" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
+                          <Component id="onlineLabel" min="-2" pref="34" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                          <Component id="offlineLabel" min="-2" pref="32" max="-2" attributes="0"/>
+                          <EmptySpace pref="240" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -344,16 +337,6 @@
                 <Component class="javax.swing.JLabel" name="offlineLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Offline"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JLabel" name="awyLabel">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="Awy"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JLabel" name="connectedLabel">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="connected"/>
                   </Properties>
                 </Component>
               </SubComponents>
