--- a/src/client/ClientGUI.form
+++ b/src/client/ClientGUI.form
@@ -655,8 +655,17 @@
                           <SubComponents>
                             <Component class="javax.swing.JTextArea" name="recetUpdateArea">
                               <Properties>
+                                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                                  <Color blue="f1" green="f4" red="f8" type="rgb"/>
+                                </Property>
                                 <Property name="columns" type="int" value="20"/>
+                                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                                  <Font name="Ubuntu" size="16" style="2"/>
+                                </Property>
                                 <Property name="rows" type="int" value="5"/>
+                                <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                                  <Color blue="46" green="46" red="4f" type="rgb"/>
+                                </Property>
                                 <Property name="enabled" type="boolean" value="false"/>
                                 <Property name="opaque" type="boolean" value="false"/>
                               </Properties>
